# MalceodJordantimesheet

./: .gitignore  .gitmodules  CLAUDE.md  FIX_BUILD_ISSUE.md  IMMEDIATE_SOLUTION.md  QUICKSTART.md  README.md  RELEASE_INSTRUCTIONS.md  SETUP.md  build.bat  build_and_prepare.bat  build_and_prepare_backup.bat  create_shortcuts.bat  create_shortcuts.ps1  file_version_info.txt  index.html  install-build-tools.ps1  install-vs-buildtools.ps1  install.bat  launch_streamlit.bat  network_install.bat  package-lock.json  package.json  portable_python_setup.bat  requirements.txt  run_timetracker.bat  tailwind.config.js  test-frontend.html  timesheet_viewer.py  tsconfig.json  update_icon.bat  vite.config.js
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.svelte  app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  database.rs  main.rs  models.rs  services.rs  system_tray.rs  utils.rs  window_tracker.rs
src/lib/components/: Dashboard.svelte  Sidebar.svelte  StatusBar.svelte  TopBar.svelte
src/lib/stores/: projects.js  settings.js  tracking.js
src/lib/utils/: time.js
