[package]
name = "modern-timesheet-tracker"
version = "2.0.0"
description = "A modern, cross-platform timesheet tracking application"
authors = ["Kyle <kyle93afc@github.com>"]
license = "MIT"
repository = "https://github.com/kyle93afc/MalceodJordantimesheet"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "window-unminimize", "window-close", "path-all", "dialog-confirm", "notification-all", "window-show", "window-set-focus", "window-set-decorations", "window-set-title", "window-set-always-on-top", "dialog-ask", "window-start-dragging", "window-set-resizable", "window-maximize", "shell-open", "window-request-user-attention", "window-hide", "window-minimize", "window-set-position", "app-hide", "dialog-open", "window-set-max-size", "window-set-skip-taskbar", "window-set-content-protected", "global-shortcut-all", "app-show", "dialog-save", "clipboard-all", "window-unmaximize", "window-set-size", "os-all", "fs-all", "window-set-icon", "window-set-min-size", "dialog-message", "window-center", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
dirs = "5.0"
# active-win-pos-rs = "0.8"  # Optional: for cross-platform window detection
# rdev = "0.4"  # Optional: for keyboard/mouse monitoring
image = "0.24"
base64 = "0.21"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "tlhelp32"] }
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }
