[package]
name = "modern-timesheet-tracker"
version = "2.0.0"
description = "A modern, cross-platform timesheet tracking application"
authors = ["Kyle <kyle93afc@github.com>"]
license = "MIT"
repository = "https://github.com/kyle93afc/MalceodJordantimesheet"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-start-dragging", "window-set-min-size", "window-set-skip-taskbar", "window-set-position", "app-hide", "window-set-always-on-top", "dialog-message", "dialog-save", "window-minimize", "window-close", "window-unmaximize", "window-set-title", "window-set-decorations", "window-set-size", "dialog-ask", "window-set-focus", "window-show", "window-set-resizable", "window-set-content-protected", "window-maximize", "dialog-open", "window-set-icon", "window-request-user-attention", "dialog-confirm", "window-hide", "window-unminimize", "window-center", "window-set-max-size", "app-show", "shell-open", "fs-all", "path-all", "os-all", "notification-all", "global-shortcut-all", "clipboard-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
dirs = "5.0"
# active-win-pos-rs = "0.8"  # Optional: for cross-platform window detection
# rdev = "0.4"  # Optional: for keyboard/mouse monitoring
image = "0.24"
base64 = "0.21"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "tlhelp32"] }
windows = { version = "0.51", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }

[package.metadata.tauri]
# Use the prebuilt WebView2 loader to avoid build issues
windows-webview2-loader = "dynamic"
